force-app/main/default/objects/Pilot_Setting__mdt/Pilot_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Pilot_Setting</label>
    <pluralLabel>Pilot_Settings</pluralLabel>
</CustomObject>