force-app/main/default/objects/Pilot_Setting__mdt/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <label>Countries (Country Names)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>