force-app/main/default/objects/Pilot_Setting__mdt/fields/Excluded_Countries__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Countries__c</fullName>
    <label>Excluded Countries (Country Names)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>