force-app/main/default/objects/Pilot_Setting__mdt/fields/Excluded_ProfileIds__c.field-meta.xml
<CustomField>
    <fullName>Excluded_ProfileIds__c</fullName>
    <label>Excluded ProfileIds (18 characters Ids)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>