force-app/main/default/objects/Pilot_Setting__mdt/fields/Excluded_Stores__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Stores__c</fullName>
    <label>Excluded Stores (Store Codes)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>