force-app/main/default/objects/Pilot_Setting__mdt/fields/Excluded_Zones__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Zones__c</fullName>
    <label>Exluded Zones (Zone Numbers)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>