force-app/main/default/objects/Pilot_Setting__mdt/fields/Features_beta__c.field-meta.xml
<CustomField>
    <fullName>Features_beta__c</fullName>
    <label>Features (beta)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>