force-app/main/default/objects/Pilot_Setting__mdt/fields/High_Priority_Excluded_ProfileIds__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_Excluded_ProfileIds__c</fullName>
    <label>High Priority Excluded ProfileIds  (18 c</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>