force-app/main/default/objects/Pilot_Setting__mdt/fields/High_Priority_ProfileIds__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_ProfileIds__c</fullName>
    <label>High Priority ProfileIds  (18 characters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>