force-app/main/default/objects/Pilot_Setting__mdt/fields/ProfileIds__c.field-meta.xml
<CustomField>
    <fullName>ProfileIds__c</fullName>
    <label>ProfileIds (18 characters Ids)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>