force-app/main/default/objects/Pilot_Setting__mdt/fields/Stores__c.field-meta.xml
<CustomField>
    <fullName>Stores__c</fullName>
    <label>Stores (Store Codes)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>