force-app/main/default/objects/Pilot_Setting__mdt/fields/Zones__c.field-meta.xml
<CustomField>
    <fullName>Zones__c</fullName>
    <label>Zones (Zone Codes)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>