force-app/main/default/objects/Pilot_Setting__mdt/listViews/ALL.listView-meta.xml
<ListView>
    <fullName>ALL</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>IsProtected</columns>
    <columns>Application__c</columns>
    <columns>Countries__c</columns>
    <columns>Excluded_Countries__c</columns>
    <columns>Excluded_ProfileIds__c</columns>
    <columns>Excluded_Stores__c</columns>
    <columns>Features_beta__c</columns>
    <columns>High_Priority_Excluded_ProfileIds__c</columns>
    <columns>High_Priority_ProfileIds__c</columns>
    <columns>Mode__c</columns>
    <columns>ProfileIds__c</columns>
    <columns>Stores__c</columns>
    <columns>Zones__c</columns>
    <filterScope>Everything</filterScope>
    <label>ALL</label>
    <language>en_US</language>
</ListView>